# choomlink-core

./: CLAUDE.md
client/RedscriptModule/src/: Cyberverse.reds
client/RedscriptModule/src/Network/: NetworkGameSystem.reds  PlayerActionTracker.reds
client/red4ext/src/: NetworkGameSystem.cpp  NetworkGameSystem.h  PlayerActionTracker.cpp  PlayerActionTracker.h
docs/superpowers/specs/: 2026-07-12-bot-harness-design.md  2026-07-12-locomotion-sync-design.md
sandbox/warmup/: ChoomLinkWarmup.reds
server/Managed/: GameServer.cs  IPacketSink.cs  Program.cs  ServerConfig.cs
server/Managed.Tests/: Cyberverse.Server.Tests.csproj  EntityTrackerTests.cs  ServerConfigTests.cs  SpatialGridTests.cs
server/Managed/NativeLayer/Protocol/Clientbound/: EMessageTypeClientbound.cs  EntityAction.cs
server/Managed/PacketHandling/: PlayerPacketHandler.cs
server/Managed/Services/: EntityTracker.cs  SpatialGrid.cs
server/Managed/Types/: Player.cs
server/Native/: vcpkg.json
server/Native/src/: GameServer.cpp
shared/protocol/clientbound/: EMessageTypeClientbound.h  WorldPacketsClientBound.h
tools/bot-harness/: CMakeLists.txt  vcpkg.json
tools/bot-harness/src/: Behavior.h  BotClient.cpp  BotClient.h  main.cpp
